@@ -33,11 +33,6 @@ func ProcessBlockFees(newbl *network.BlockRcvd) {
 
 	for i := 1; i < len(bl.Txs); i++ {
 		txs[bl.Txs[i].Hash.Hash] = i
-
-		kspb := 1000 * bl.Txs[i].Fee / uint64(bl.Txs[i].Size)
-		if i == 1 || newbl.MinFeeKSPB > kspb {
-			newbl.MinFeeKSPB = kspb
-		}
 		fees[i-1][0] = uint64(bl.Txs[i].Size)
 		fees[i-1][1] = uint64(bl.Txs[i].Fee)
 		fees[i-1][2] = uint64(i)
